# shlog

./: CMakeLists.txt
cmake/: shlog-config.cmake.in
demo/: CMakeLists.txt  demo.cpp
include/: singleton.hpp  spsc_queue.hpp
include/shlog/: log_sink.h  logger.h
include/shlog/libs/: mpmc_queue.hpp  noncopyable.h  singleton.hpp  spsc_queue.hpp  uring_aio.h
libs/: spsc_queue.hpp
src/: CMakeLists.txt  log_sink.cpp  log_sink.h  logger.cpp  logger.h  uring_aio.h
test/: CMakeLists.txt
test/src_test/: CMakeLists.txt  logger_test.cpp
